--- a/views/admin/blockchain-management.ejs
+++ b/views/admin/blockchain-management.ejs
@@ -204,7 +204,13 @@
       </div>
       <main class="main">
         <div id="container-overlay">
-          <h1 class="settings-title">Blockchain Management</h1>
+          <div class="title-container">
+            <div class="r">
+              <i class="fa fa-link"></i>
+              <h1 class="title">Blockchain Management</h1>
+            </div>
+          </div>
+          <hr class="title-line" />
           <div class="page-title">
             <div class="blockchain">
               <h4>Blockchain Link: <span>No data available yet</span></h4>
