--- a/views/admin/election-results.ejs
+++ b/views/admin/election-results.ejs
@@ -202,7 +202,14 @@
           </li>
         </ul>
       </div>
-      <main class="main">Election Results</main>
+      <main class="main"> <div class="title-container">
+          <div class="r">
+            <i class="fa fa-cogs"></i>
+            <h1 class="title">Election Results</h1>
+          </div>
+        </div>
+        <hr class="title-line" />
+        <div class="first-main"></main>
     </div>
 
     <footer class="footer">
