--- a/views/admin/election-voter-turnout.ejs
+++ b/views/admin/election-voter-turnout.ejs
@@ -203,31 +203,40 @@
         </ul>
       </div>
       <main class="main">
-        <div class="main-header">
-          <select class="select">
-            <option>Main Campus</option>
-          </select>
-          <p id="text-blockchain-link">
-            <b>Blockchain Link:</b>
-            <span><a href="https://www.blockchain.com/ucsebulsu">https://www.blockchain.com/ucsebulsu</a></span>
-          </p>
-        </div>
-        <div class="main-content">
-          <div class="main-left">
-            <h1>LSC Voter Turnout</h1>
-            <div id="container-charts"></div>
+        <div class="title-container">
+          <div class="r">
+            <i class="fa fa-cogs"></i>
+            <h1 class="title">Voter Turnout</h1>
           </div>
-          <div class="main-right">
-            <h1>BulSU Total Voter Turnout</h1>
-            <div class="content-box-2">
-              <canvas id="chart-turnout"></canvas>
-
-              <div class="summary-text">
-                <span></span>
-              </div>
+        </div>
+        <hr class="title-line" />
+        <div class="first-main">
+          <div class="main-header">
+            <select class="select">
+              <option>Main Campus</option>
+            </select>
+            <p id="text-blockchain-link">
+              <b>Blockchain Link:</b>
+              <span><a href="https://www.blockchain.com/ucsebulsu">https://www.blockchain.com/ucsebulsu</a></span>
+            </p>
+          </div>
+          <div class="main-content">
+            <div class="main-left">
+              <h1>LSC Voter Turnout</h1>
+              <div id="container-charts"></div>
             </div>
-            <br />
-            <div class="content-colleges"></div>
+            <div class="main-right">
+              <h1>BulSU Total Voter Turnout</h1>
+              <div class="content-box-2">
+                <canvas id="chart-turnout"></canvas>
+
+                <div class="summary-text">
+                  <span></span>
+                </div>
+              </div>
+              <br />
+              <div class="content-colleges"></div>
+            </div>
           </div>
         </div>
       </main>
