--- a/views/admin/system-edit-account.ejs
+++ b/views/admin/system-edit-account.ejs
@@ -227,7 +227,7 @@
           <div class="main-details-profile">
             <img class="circle-img" id="img-admin" src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
             <p><span><%= loggedInAdmin.name %></span></p>
-            <button id="change-image">Change Profile Image</button>
+            <!-- <button id="change-image">Change Profile Image</button> -->
             <br />
             <!-- File input for image upload; using base64 conversion -->
             <input type="file" class="input-file" id="input-file" />
