--- a/views/homepages/index-results-are-out-period.ejs
+++ b/views/homepages/index-results-are-out-period.ejs
@@ -45,7 +45,7 @@
             Thank you for your participation! The election period for the <span class="election-name">BulSU Student Government Elections S.Y. 2025-2026</span> has concluded. To view the official results, please refer to the University Commission on Student Elections (BulSU UCSE) official page:
             <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a> <br />
             <br />
-            Alternatively, you can view and verify the results directly by clicking <a href="voter_results.html">here.</a>
+            Alternatively, you can view and verify the results directly by clicking <a href="/rvs-about">here.</a>
           </p>
         </div>
       </div>
