--- a/public/admin/css/blockchain-management.css
+++ b/public/admin/css/blockchain-management.css
@@ -31,6 +31,7 @@
   border-radius: 1.5rem;
   justify-content: flex-start;
   align-items: flex-start;
+  margin: 2rem;
 }
 
 .left,
@@ -44,7 +45,7 @@
   align-items: flex-start;
 }
 
-hr {
+.first-main hr {
   border: none;
   width: 100%;
   height: 0.3rem;
