--- a/public/admin/css/election-reset.css
+++ b/public/admin/css/election-reset.css
@@ -1,13 +1,13 @@
 .main {
-  /* display: flex;
-    justify-content: center;
-    align-items: center; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .reset-election {
   display: flex;
   flex-direction: column;
-  flex-basis: 30vw;
+  width: 50%;
 
   justify-content: center;
   align-items: center;
@@ -16,6 +16,11 @@
   border: 0.25rem solid #80550c;
   border-radius: 1.5rem;
   padding: 2rem;
+}
+
+.text-field {
+  background: #d8ac65;
+  border: none;
 }
 
 .image {
