--- a/public/admin/css/election-voter-info.css
+++ b/public/admin/css/election-voter-info.css
@@ -7,7 +7,7 @@
 .main-content,
 table,
 td {
-  border: 1px solid black;
+  /* border: 1px solid black; */
 }
 
 .main {
@@ -19,6 +19,7 @@ td {
   justify-content: center;
 
   background-color: var(--background-lighter-yellow);
+  padding: 1.5rem;
 }
 
 .main-header {
@@ -35,7 +36,7 @@ td {
 }
 
 .main-header-search {
-  margin-right: 4%;
+  margin-right: 2rem;
 }
 
 .main-header-options {
@@ -53,18 +54,24 @@ td {
 
 .main-content {
   flex-grow: 1;
-  width: 100%;
+  width: 96%;
+  /* border: 1px solid black; */
 }
 
 table,
 th,
 td {
-  border: 0.2em solid black;
+  border: 0.1em solid #a60212;
   border-collapse: collapse;
 }
 
 table {
+  outline: 2px solid #a60212;
+}
+
+table {
   width: 100%;
+  border-radius: 0;
 }
 
 table th,
@@ -76,4 +83,53 @@ table td {
 table th {
   background-color: #a60212;
   color: white;
+}
+
+.no {
+}
+/* from net */
+
+.group {
+  display: flex;
+  line-height: 28px;
+  align-items: center;
+  position: relative;
+  max-width: 190px;
+  padding-right: 0.7rem;
+  padding-top: 0.4rem;
+}
+
+.input {
+  width: 100%;
+  height: 1.5rem;
+  line-height: 28px;
+  padding: 0 1rem;
+  padding-left: 2.5rem;
+  border: 2px solid transparent;
+  border-radius: 0.5rem;
+  outline: none;
+  background-color: #f3f3f4;
+  color: #0d0c22;
+  transition: 0.3s ease;
+  border: 0.1rem solid #482e03;
+}
+
+.input::placeholder {
+  color: #9e9ea7;
+}
+
+.input:focus,
+input:hover {
+  outline: none;
+  border-color: #a60212;
+  background-color: #fff;
+  box-shadow: 0 0 0 4px rgb(234 76 137 / 10%);
+}
+
+.icon {
+  position: absolute;
+  left: 1rem;
+  fill: #9e9ea7;
+  width: 1rem;
+  height: 1rem;
 }
