--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,6 +37,7 @@
   --color-darkBlue: #004aad;
   --color-lightBlue: #2c86fd;
   --color-gray: #323847;
+  --color-purple: #503a96;
 
   --sidebar-color-lighter: #d29c45;
   --sidebar-color: #e1ae5b;
@@ -48,7 +49,7 @@
   --height-footer: 4vh;
 
   /* div header sizes */
-  --width-header-logo: 28vw;
+  --width-header-logo: 26vw;
   --width-header-nav: calc(100vw - var(--width-header-logo));
   --width-header-nav-content: 50%;
 
@@ -65,6 +66,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* color: #e50e24; */
 }
 
 body {
@@ -78,12 +80,12 @@ body {
   font-size: 1rem;
 }
 
-li {
+.header-nav-content li {
   list-style: none;
 }
 
 .header-nav-content a {
-  color: white;
+  color: var(--color-lightYellow);
   text-decoration: none;
   font-size: 1.2rem;
 }
@@ -235,7 +237,7 @@ img {
 }
 
 #copyright-img {
-  margin-top: 0.2%;
+  /* margin-top: 0.2%; */
   height: 2.3vh;
 }
 .footer a {
@@ -271,6 +273,7 @@ button {
   padding-bottom: 1rem;
   justify-content: center;
   align-items: center;
+  /* border: 1px solid black; */
 }
 
 .montserrat {
@@ -343,9 +346,6 @@ a {
   padding: 0 5rem;
 
   /* border: 3px solid black; */
-
-  /* margin-top: 4%; */
-  /* border: 1px solid black; */
 }
 
 h3 {
@@ -354,7 +354,7 @@ h3 {
 }
 
 .header-nav-content a {
-  color: var(--color-lightYellow);
+  color: var(--color-lightYellow) important!;
 }
 
 .header-nav-content {
@@ -393,3 +393,17 @@ li {
 .about {
   color: var(--color-darkYellow);
 }
+
+ul,
+ol {
+  padding-left: 2rem;
+}
+
+.profile {
+  padding-right: 2rem;
+  border: 1px solid black;
+}
+
+/* button:hover {
+  background-color: #245414;
+} */
