--- a/public/voter/css/index-voter.css
+++ b/public/voter/css/index-voter.css
@@ -38,7 +38,7 @@
 
   --height-header: 16vh;
   /* div header sizes */
-  --width-header-logo: 25vw;
+  --width-header-logo: 26vw;
   --width-header-nav: calc(100vw - var(--width-header-logo));
   --width-header-nav-content: 50%;
 
@@ -58,11 +58,7 @@ img {
 
 li {
   list-style: none;
-}
-
-a {
-  color: white;
-  text-decoration: none;
+  color: #f2ddb4;
 }
 
 /* testing */
@@ -94,51 +90,6 @@ h4,
 h5,
 h6 {
   font-family: "Montserrat", "Century Gothic";
-}
-
-/* Header */
-.header {
-  display: flex;
-  flex-basis: var(--height-header);
-  position: relative;
-}
-
-.header-logo {
-  display: flex;
-  flex-basis: var(--width-header-logo);
-  justify-content: center;
-  align-items: center;
-  padding-left: 3rem;
-}
-
-.header-logo img {
-  width: 90%;
-}
-
-.header-nav {
-  display: flex;
-  flex-basis: var(--width-header-nav);
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.header-nav-content {
-  display: flex;
-  flex-basis: var(--width-header-nav-content);
-  gap: 3.5rem;
-  justify-content: center;
-  align-items: center;
-  padding-top: 1.5rem;
-  padding-left: 3rem;
-}
-
-.header-bottom-line {
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 93%;
-  border-bottom: 0.28em solid var(--color-yellow);
 }
 
 /* CONTENT */
