--- a/public/voter/css/register.css
+++ b/public/voter/css/register.css
@@ -23,12 +23,12 @@
 }
 
 .header-nav-content {
-  padding-left: 12rem;
+  padding-left: 10rem;
 }
 
-.content h1 {
+/* .content h1 {
   font-size: 2.125rem;
-}
+} */
 
 .main-second {
   display: flex;
@@ -104,10 +104,15 @@ input:-webkit-autofill:active {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  color: #6e1311;
 }
 
 .row img {
   height: 3.4rem;
   padding-right: 1rem;
   width: 5rem;
+}
+
+li {
+  color: #f5ab29;
 }
