--- a/views/admin/election-reset.ejs
+++ b/views/admin/election-reset.ejs
@@ -83,7 +83,10 @@
       </div>
       <div class="header-user">
         <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
-        <div class="admin-name"><%= loggedInAdmin.name %></div>
+        <div class="profile">
+          <div class="admin-name"><%= loggedInAdmin.name %></div>
+          <span class="job"><%= loggedInAdmin.role %></span>
+        </div>
         <div class="dropdown" onclick="toggleDropdown()"></div>
         <div class="dropdown-menu">
           <a href="/edit-account">View Account</a>
@@ -155,7 +158,7 @@
           </li>
 
           <li>
-            <div class="icon-link">
+            <div class="icon-link" id="active-tab">
               <a href="/voter-info">
                 <i class="fa fa-bar-chart"></i>
                 <span class="link_name">Election</span>
@@ -168,7 +171,7 @@
               <li><a href="/voter-turnout">Voter Turnout</a></li>
               <li><a href="/vote-tally">Vote Tally</a></li>
               <li><a href="/results">Results</a></li>
-              <li><a href="/reset">Reset Election</a></li>
+              <li><a href="/reset" id="active-sub">Reset Election</a></li>
             </ul>
           </li>
 
@@ -201,7 +204,7 @@
         </ul>
       </div>
       <main class="main">
-        <div class="reset-election">
+        <div class="reset-election box-shadow">
           <form>
             <img src="../img/warning.png" class="image" alt="Reset Election Warning" />
             <h2>Are you sure you want to reset the current election?</h2>
@@ -215,8 +218,8 @@
             <br />
             <br />
             <div class="form-buttons">
-              <input type="reset" value="Cancel" /> &nbsp;&nbsp;&nbsp;&nbsp;
-              <input type="submit" value="Confirm" />
+              <input type="reset" value="Cancel" class="action-buttons cancel-button" /> &nbsp;&nbsp;&nbsp;&nbsp;
+              <input type="submit" value="Confirm" class="action-buttons save-button" />
             </div>
           </form>
         </div>
