--- a/views/admin/system-activity-log.ejs
+++ b/views/admin/system-activity-log.ejs
@@ -8,10 +8,12 @@
 
     <link rel="stylesheet" type="text/css" href="admin/css/index-admin.css" />
     <link rel="stylesheet" type="text/css" href="admin/css/sidebar.css" />
+    <link rel="stylesheet" type="text/css" href="admin/css/system-activity-log.css" />
 
     <!-- Boxicons CDN Link -->
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=upins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
@@ -82,7 +84,10 @@
       </div>
       <div class="header-user">
         <img src="<%= loggedInAdmin.img %>" alt="Admin Profile" />
-        <div class="admin-name"><%= loggedInAdmin.name %></div>
+        <div class="profile">
+          <div class="admin-name"><%= loggedInAdmin.name %></div>
+          <span class="job"><%= loggedInAdmin.role %></span>
+        </div>
         <div class="dropdown" onclick="toggleDropdown()"></div>
         <div class="dropdown-menu">
           <a href="/edit-account">View Account</a>
@@ -182,7 +187,7 @@
           </li>
 
           <li>
-            <div class="icon-link">
+            <div class="icon-link" id="active-tab">
               <a href="/edit-account">
                 <i class="fa fa-tasks"></i>
                 <span class="link_name">System</span>
@@ -194,12 +199,66 @@
               <li><a href="/edit-account">Edit Account</a></li>
               <li><a href="/manage-admins">Manage Admins</a></li>
               <li><a href="/help-page">Help Page</a></li>
-              <li><a href="/system-activity-log">System Activity Log</a></li>
+              <li><a href="/system-activity-log" id="active-sub">System Activity Log</a></li>
             </ul>
           </li>
         </ul>
       </div>
-      <main class="main"></main>
+      <main class="main">
+        <div class="title-container">
+          <div class="r">
+            <i class="fa fa-history" aria-hidden="true"></i>
+            <h1 class="title">System Activity Log</h1>
+          </div>
+        </div>
+        <hr class="title-line" />
+        <div class="first-main">
+          <div class="select-log">
+            <div>
+              <input type="radio" id="all-activity-log" name="system-log" value="all-activity-log" checked />
+              <label for="all-activity-log">All</label>
+            </div>
+            <div>
+              <input type="radio" id="admin-activity-log" name="system-log" value="admin-activity-log" />
+              <label for="admin-activity-log">Admin Activity Log</label>
+            </div>
+            <div>
+              <input type="radio" id="voter-activity-log" name="system-log" value="voter-activity-log" />
+              <label for="voter-activity-log">Voter Activity Log</label>
+            </div>
+          </div>
+          <br />
+          <table id="systemActivityTable">
+            <thead>
+              <tr>
+                <th>Timestamp</th>
+                <th>Performed By</th>
+                <th>Role</th>
+                <th>Action</th>
+                <th>Details</th>
+              </tr>
+            </thead>
+            <tbody>
+              <!-- logic -->
+              <tr>
+                <td>2025-02-20 10:30 AM</td>
+                <td>Zarina Dungo</td>
+                <td>Developer</td>
+                <td>Election Configuration.</td>
+                <td>Changed election name.</td>
+              </tr>
+              <!-- logic -->
+              <tr>
+                <td>2025-02-20 10:30 AM</td>
+                <td>Zarina Dungo</td>
+                <td>Developer</td>
+                <td>Election Configuration.</td>
+                <td>Changed election name.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </main>
     </div>
 
     <footer class="footer">
