--- a/views/admin/system-help-page.ejs
+++ b/views/admin/system-help-page.ejs
@@ -199,7 +199,16 @@
           </li>
         </ul>
       </div>
-      <main class="main"></main>
+      <main class="main">
+         <div class="title-container">
+          <div class="r">
+            <i class="fa fa-cogs"></i>
+            <h1 class="title">Help Page</h1>
+          </div>
+        </div>
+        <hr class="title-line" />
+        <div class="first-main">
+      </main>
     </div>
 
     <footer class="footer">
