--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -43,7 +43,7 @@
         <div class="main-second">
           <div class="second-left box-shadow">
             <form>
-              <h2>Contact Form</h2>
+              <h2 class="red">Contact Form</h2>
               <br />
               <i class="fa fa-user-circle icon"></i>
               <input type="text" id="name" class="contact-field" name="name" placeholder="Type your name here..." />
