--- a/views/homepages/rvs-voter-turnout.ejs
+++ b/views/homepages/rvs-voter-turnout.ejs
@@ -7,7 +7,10 @@
 
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="stylesheet" type="text/css" href="css/home.css" />
-    <link rel="stylesheet" type="text/css" href="css/index_election.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="css/index_election.css" /> -->
+    <link rel="stylesheet" type="text/css" href="css/rvs.css" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet" />
   </head>
@@ -17,34 +20,38 @@
         <img src="img/logo_tanikala.png" alt="Tanikala Voting System" />
       </div>
       <nav class="header-nav">
-        <ul class="header-nav-content">
-          <li><a href="/" id="active-link">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/contact">Contact</a></li>
-        </ul>
+        <h2 id="active-link">Results Verification Portal</h2>
       </nav>
       <div class="header-bottom-line"></div>
     </header>
 
     <div class="content">
       <div class="content-title">
-        <h3 class="h3">ONLINE VOTING SYSTEM FOR THE STUDENT GOVERNMENT ELECTIONS AT BULACAN STATE UNIVERSITY</h3>
+        <h3 class="h3" style="text-transform: uppercase">Welcome to the Bulacan State University Student Government Elections - Results Verification Portal!</h3>
       </div>
 
       <div class="content-main">
         <div class="main-first">
-          <img src="img/logo_bulsu.png" class="main-first-logo" alt="BulSU Logo" />
-          <div class="first-text">
-            <h2 class="montserrat period">No Ongoing Elections Right Now</h2>
+          <ul class="header-nav-content">
+            <li><a href="/rvs-about">About</a></li>
+            <li><a href="/rvs-voter-turnout" id="active-link2">Voter Turnout</a></li>
+            <li><a href="/rvs-votes-per-candidate">Votes per Candidate</a></li>
+            <li><a href="/rvs-election-results">Election Results</a></li>
+          </ul>
+          <div class="election-title">
+            <p class="title">
+              <span>BulSU Student Government Elections S.Y. 2025 - 2026</span>
+            </p>
           </div>
-          <img src="img/logo_bulsu_ucse.png" class="main-first-logo" alt="BulSU UCSE Logo" />
         </div>
+
+        <div class="beside">
+          <i class="fa-solid fa-house"></i>
+          <a href="/index-results-are-out-period">Go Back to Homepage.</a>
+        </div>
+
         <div class="main-container">
-          <p class="bigger-text">
-            The election period for the BulSU Student Government Elections is currently not active. Please check back later for updates on future election events. <br />
-            <br />
-            For more information, visit the University Commission on Student Elections (BulSU UCSE) official page: <a href="https://www.facebook.com/ucsebulsu">https://www.facebook.com/ucsebulsu</a>
-          </p>
+          <p>This page shows the total number of students who participated in the election, providing a clear overview of voter engagement. Explore the participation rate across SSC and LSC elections to see how many students made their voices heard.</p>
         </div>
       </div>
     </div>
@@ -62,7 +69,7 @@
       <div class="footer-right">
         <img src="img/log-in.png" class="footer-img" id="admin-img" />
         <p>Admin? Log in&nbsp;</p>
-        <a href="/admin-login"> here.</a>
+        <a href="admin_login.html"> here.</a>
       </div>
     </footer>
     <script src="js/index.js"></script>
